Noteworthy changes in version 2.0.0 (unreleased)
-------------------------------------------------

 * First separate release of GpgME++.

 * cmake: The gpgme++ folder containing the header files is no longer exported
   as include directory. All headers have to be included with the prefix
   gpgme++/ now.

 * Removed the TrustItem listing functionality which used GpgME's trustlist
   feature which worked only for a short period in 2003.  [T4834]

 * Interface changes relative to the 1.24 branch of gpgme:
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 Context::startTrustItemListing          REMOVED.
 Context::nextTrustItem                  REMOVED.
 Context::endTrustItemListing            REMOVED.
 EventLoopInteractor::nextTrustItemEvent REMOVED.
 TrustItem                               REMOVED.


Noteworthy changes in earlier versions can be found in the NEWS file of
gpgme.


 Copyright 2024 g10 Code GmbH

 This file is free software; as a special exception the author gives
 unlimited permission to copy and/or distribute it, with or without
 modifications, as long as this notice is preserved.

 This file is distributed in the hope that it will be useful, but
 WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
 implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.